--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
           <li>História</li>
         </ul>
       </section>
+
+      <section class="destino_3">
+        <img src="./imagens/Image_03.png" alt="templo beomeo-sa">
+        <h3>2. Templo Beomeo-sa</h3>
+        <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+        <ul>
+          <h4>Bom para:</h4>
+          <li>História</li>
+        </ul>
+      </section>
     </main>
   </div>
 </body>
