--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
       </section>
 
-      <section class="destino_3">
+      <section class="destino_2">
         <img src="./imagens/Image_03.png" alt="templo beomeo-sa">
         <h3>2. Templo Beomeo-sa</h3>
         <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
@@ -43,6 +43,18 @@
           <h4>Bom para:</h4>
           <li>História</li>
         </ul>
+      </section>
+      <section class="destino_3">
+        <img src="./imagens/Image_04.png" alt="Parque youngdusan">
+        <h3>3. Parque youngdusan</h3>
+        <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+        <h4>Bom para:</h4>
+        <ul>
+          <li>Casais</li>
+          <li>Famílias</li>
+          <li>Orçamento</li>
+        </ul>
+
       </section>
     </main>
   </div>
